linux-latest (44) UNRELEASED; urgency=low

  [ Ben Hutchings ]
  * Add Turkish debconf template translations (Mert Dirik) (Closes: #660119)
  * Update standards-version to 3.9.3:
    - Do not move packages to the 'metapackages' section, as that will
      cause APT not to auto-remove their dependencies

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Feb 2012 03:30:56 +0000

linux-latest (43) unstable; urgency=low

  * Add Vcs-{Svn,Browser} fields
  * Add debconf template translations:
    - Danish (Joe Hansen) (Closes: #656642)
    - Spanish (Slime Siabef) (Closes: #654681)
    - Italian (Stefano Canepa) (Closes: #657386)
  * [s390] Update the check for flavours without modules, removing the
    useless linux-headers{,-2.6}-s390x-tape packages

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 31 Jan 2012 03:10:26 +0000

linux-latest (42) unstable; urgency=low

  * Rename source package to linux-latest
  * Add debconf template translations:
    - Portugese (Miguel Figueiredo) (Closes: #651123)
    - Serbian latin (Zlatan Todoric) (Closes: #635895)
    - Russian (Yuri Kozlov) (Closes: #652431)
    - Japanese (Nobuhiro Iwamatsu) (Closes: #655687)
  * Update to 3.2.0-1

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Jan 2012 04:02:32 +0000

linux-latest-2.6 (41) unstable; urgency=low

  * Remove dependency on module makefiles in linux-support package
  * Update to 3.1.0-1

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 14 Nov 2011 07:10:35 +0000

linux-latest-2.6 (40) unstable; urgency=low

  * Add debconf template translations:
    - Serbian cyrillic (Zlatan Todoric) (Closes: #635893)
    - German (Holger Wansing) (Closes: #637764)
    - French (Debian French l10n team) (Closes: #636624)
    - Swedish (Martin Bagge) (Closes: #640058)
    - Dutch (Jeroen Schot) (Closes: #640115)
    - Catalan (Innocent De Marchi) (Closes: #642109)
  * Update to 3.0.0-2

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 06 Oct 2011 04:36:45 +0100

linux-latest-2.6 (39) unstable; urgency=low