@@ -6,6 +6,7 @@ Description: Header files for Linux @flavour@ configuration (meta-package)
  Linux kernel @flavour@ configuration.
 
 Package: linux-headers-2.6@localversion@
+Section: oldlibs
 Depends: linux-headers@localversion@, ${misc:Depends}
 Description: Header files for Linux @flavour@ configuration (dummy package)
  This is a dummy transitional package.  It can be safely removed.
