@@ -6,6 +6,7 @@ Description: Linux for @class@ (meta-package)
  @longclass@.
 
 Package: linux-image-2.6@localversion@
+Section: oldlibs
 Depends: linux-image@localversion@, ${misc:Depends}
 Description: Linux for @class@ (dummy package)
  This is a dummy transitional package.  It can be safely removed.
