@@ -5,6 +5,8 @@ linux-latest (44) UNRELEASED; urgency=low
   * Update standards-version to 3.9.3:
     - Do not move packages to the 'metapackages' section, as that will
       cause APT not to auto-remove their dependencies
+  * Move transitional packages to the section 'oldlibs', so that APT
+    will treat the replacement packages as manually installed
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 17 Feb 2012 03:30:56 +0000
 
